BUGFIX: Delay in navigation bar collapsing
* 40em is too much. The browser will animate max-height from 40em to 0.01em
  but the view is actually 3.8em high - 90% of the animation has no effect.
  Cut it down to 3.8em.

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -112,7 +112,7 @@ header nav
       color color-font-nav
 
 .shownav
-  max-height 40em
+  max-height 3.8em
 
 .search
   padding 0.1em 0 0 1em
